--- a/Proyecto/app/src/main/res/layout/activity_listado_lru.xml
+++ b/Proyecto/app/src/main/res/layout/activity_listado_lru.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".Listado_lru">
 
+    <TextView
+        android:id="@+id/ruta_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="37dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/list_lru"
+        android:layout_width="409dp"
+        android:layout_height="673dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ruta_1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
