--- a/Proyecto/app/src/main/res/layout/activity_calculadora_impuesto.xml
+++ b/Proyecto/app/src/main/res/layout/activity_calculadora_impuesto.xml
@@ -67,27 +67,6 @@
             android:orientation="horizontal">
 
 
-            <TextView
-                android:id="@+id/txtprecio_dolar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Valor de cambio del Dolar" />
-
-            <TextView
-                android:id="@+id/txtprecio_dolar_valor"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="4.17" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="315dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
             <CheckBox
                 android:id="@+id/cbxprev_2004"
                 android:layout_width="0dp"
@@ -159,6 +138,35 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Cache Registros Previos" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="315dp"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnrevisar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Revisar" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="315dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/spnOpcionesLru"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
